# FileEncryptor

./: README.md
binaries/: encryptor
sources/: Cargo.toml  config.toml
sources/.cargo/: config
sources/src/: main.rs
